--- a/task-15.html
+++ b/task-15.html
@@ -11,7 +11,31 @@
 </head>
 
 <body style="margin: 0; padding: 0; font-family: 'Times New Roman', Times, serif;">
-    
+    <header>
+        <div class="container-fluid d-flex justify-content-between "
+            style=" height: 400px; padding: 10px; background-image: url(pencile.jpg); width: 100%; background-size: cover; margin-top: -160px;">
+            <div class=" text-light" style="padding-top: 180px; padding-left: 100px;">
+                <p style="font-size: 55px; ">DRAW</p>
+            </div>
+            <nav class="nav" style="text-decoration: none; padding-top: 180px;">
+                <a class="nav-link text-light" href="#">Home</a>
+                <a class="nav-link text-light" href="#">About Us</a>
+                <a class="nav-link text-light" href="#">Gallery</a>
+                <div class="dropdown">
+                    <button class="btn text-light dropdown-toggle" type="button" id="dropdownMenuButton1"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Dropdown
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                </div>
+                <a class="nav-link text-light" href="#">Contact Us</a>
+            </nav>
+        </div>
+    </header>
   
    
 
