Contact us code started.

--- a/task-15.html
+++ b/task-15.html
@@ -40,6 +40,13 @@
         <a href="#" class="rounded-pill bg-dark text-light px-3 text-decoration-none">Home</a> &nbsp;/&nbsp;
         <a href="#" class="text-muted text-decoration-none"> Contact Us</a>
     </div>
+    <div class="container-fluid mt-5 ">
+        <h1 class="text-center" style="color: #2dd3ae;"><b>Contact Us</b></h1>
+        <p class="text-muted text-center">add your caption here</p>
+        <div class="container-fluid d-flex justify-content-around mt-5 ">
+           
+        </div>
+    </div>
    
 
     
