Get touch and feedback container has been added.

--- a/task-15.html
+++ b/task-15.html
@@ -44,6 +44,19 @@
         <h1 class="text-center" style="color: #2dd3ae;"><b>Contact Us</b></h1>
         <p class="text-muted text-center">add your caption here</p>
         <div class="container-fluid d-flex justify-content-around mt-5 ">
+            <div>
+                <h3>
+                    <b>Get In Touch</b>
+                </h3>
+                <p class="text-muted">1234k Avenue, Block-4, Canada.</p>
+                <hr>
+                <p class="text-muted">
+                    Donec mi nilla, auctor nec sem a, ornare auctormi. Sed+mi tortor, commodo a felis in, fringilla
+                    tincidunt nilla.<br />Vestibulum volutpat non eros ut vulpuuctor nec sem.
+                </p>
+                <textarea class="form-control mb-5" id="exampleFormControlTextarea1" rows="6"
+                    style="border: 2px solid #2dd3ae;"></textarea>
+            </div>
            
         </div>
     </div>
