Contact us form added.

--- a/task-15.html
+++ b/task-15.html
@@ -57,7 +57,45 @@
                 <textarea class="form-control mb-5" id="exampleFormControlTextarea1" rows="6"
                     style="border: 2px solid #2dd3ae;"></textarea>
             </div>
-           
+            <div>
+                <div class=" container-fluid d-flex justify-content-between">
+                    <div class="mb-3">
+                        <label for="firstname" class="form-label">First Name</label>
+                        <input type="text" class="form-control"
+                            style="background-color: #f1f1f1; border-bottom:2px solid #2dd3ae ;"
+                            id="exampleFormControlTextarea1" id="firstname" placeholder="Johnson">
+                    </div>
+                    <div class="mb-3">
+                        <label for="lastnamme" class="form-label">Last Name</label>
+                        <input type="email" class="form-control"
+                            style="background-color: #f1f1f1; border-bottom:2px solid #2dd3ae ;"
+                            id="exampleFormControlTextarea1" id="lastnamme" placeholder="MK">
+                    </div>
+                </div>
+                <div class=" container-fluid d-flex justify-content-between">
+
+                    <div class="mb-3">
+                        <label for="lastnamme" class="form-label">Mobile</label>
+                        <input type="email" class="form-control"
+                            style="background-color: #f1f1f1; border-bottom:2px solid #2dd3ae ;"
+                            id="exampleFormControlTextarea1" id="lastnamme" placeholder="xxxxx xxxxx">
+                    </div>
+                    <div class="mb-3">
+                        <label for="firstname" class="form-label">Email address</label>
+                        <input type="text" class="form-control"
+                            style="background-color: #f1f1f1; border-bottom:2px solid #2dd3ae ;"
+                            id="exampleFormControlTextarea1" id="firstname" placeholder="johnsonmk@gmail.com">
+                    </div>
+                </div>
+                <div>
+                    <label for="exampleFormControlTextarea1" class="form-label">Your message</label>
+                    <textarea class="form-control shadow p-3 mb-3 rounded" placeholder="type your message here"
+                        style="background-color: #f1f1f1; border-bottom:2px solid #2dd3ae ;"
+                        id="exampleFormControlTextarea1" rows="7"></textarea>
+                </div>
+                <button type="submit"
+                    class="text-light bg-dark border-0 rounded text-center w-100 pt-2 mb-5"><b>SEND</b></button>
+            </div>
         </div>
     </div>
    
