footer information added.

--- a/task-15.html
+++ b/task-15.html
@@ -98,7 +98,60 @@
             </div>
         </div>
     </div>
-   
+    <footer style="background-color: #f1f1f1 ;">
+        <div class="d-flex justify-content-start ">
+            <div class="container mt-3 mx-4">
+                <h3 style="color: #2dd3ae;">
+                    <b>DRAW</b>
+                </h3>
+                <p class="text-muted fs-5"> Est dolorem voluptas saepe, obcaecati sint, dicta in iusto explicabo ipsam
+                    totam nulla delectus, recusandae rerum possimus molestiae culpa.</p>
+                <p class="text-muted fs-5">
+                <h4>Catch on Social</h4>
+                <div class="d-flex">
+                    <i class="fa fa-facebook-f"
+                        style="padding: 8px 9px ;  margin: 4px; border-radius: 50%; background-color:#3b5998 ; color: white;"></i>
+                    <i class="fa fa-twitter"
+                        style="padding: 8px 9px ;  margin: 4px; border-radius: 50%; background-color:#1da1f2 ; color: white;"></i>
+                    <i class="fa fa-firefox"
+                        style="padding: 8px 9px ;  margin: 4px; border-radius: 50%; background-color:#f44335 ; color: white;"></i>
+                    <i class="fa fa-google-plus"
+                        style="padding:  9px 8px  ;  margin: 4px; border-radius: 50%; background-color:#f44335 ; color: white;"></i>
+                </div>
+            </div>
+            <div class="container mt-5">
+                <h4><b>Navigation</b></h4>
+                <div class=" mt-3">
+                    <a href="#" class="text-decoration-none text-muted">Home</a><br /><br />
+                    <a href="#" class="text-decoration-none text-muted">About Us</a><br /><br />
+                    <a href="#" class="text-decoration-none text-muted">Gallery</a><br /><br />
+                    <a href="#" class="text-decoration-none text-muted">Services</a><br /><br />
+                    <a href="#" class="text-decoration-none text-muted">Contact Us</a>
+                </div>
+            </div>
+            <div class="container mt-5">
+                <h4><b>Recent Comments</b></h4>
+                <div>
+                    <i class="text-muted">Petey Cruiser</i>
+                    <p>Sed do eiusmod tempor labore</p><br />
+                    <i class="text-muted"> Anna Sthesia</i>
+                    <p>Lorem ipsum dolor sit amet </p><br />
+                    <i class="text-muted">Bob Frapples</i>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+            </div>
+            <div class="container mt-5">
+                <h4><b>Contact Info</b></h4>
+                <p><b>Phone</b></p>
+                <p class="text-muted">+121 098 8907 9987</p><br />
+                <p><b>Email</b></p>
+                <p class="text-muted">info@example.com</p><br />
+                <p><b>Location</b></p>
+                <p class="text-muted">Honey Avenue, New York City</p>
+            </div>
+        </div>
+        
+    </footer>
 
     
 </body>
