--- a/task-15.html
+++ b/task-15.html
@@ -150,7 +150,9 @@
                 <p class="text-muted">Honey Avenue, New York City</p>
             </div>
         </div>
-        
+        <div class="container-fluid text-center bg-dark text-light pt-2" style="height: 40px;">
+            <p>&copy; 2019 Draw. All right reserved | Design by <b>W3layouts.</b></p>
+        </div>
     </footer>
 
     
